[package]
name = "walsh-transform"
authors = [
    "Robin Salen <salenrobin@gmail.com>",
]
version = "0.1.0"
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/mir-protocol/plonky2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
primal = "0.2"
rayon = "1.6"